styles.css
/* ... */
.bottom p {
  max-width: 50vw;
  font-family: 'Roboto', sans-serif;
  font-size: 1.1rem;
  letter-spacing: 0rem;
  line-height: 1.5rem;
  color: #667085;
  overflow-wrap: break-word;
  margin-top: 0 auto;
  font-weight: 400;
}
.esrFeature {
  width: 85vw;
  height: fit-content;
}
.cbImage {
  width: 70vw;
  height: fit-content;
  z-index: 2;
}
.esrImage {
  width: 70vw;
  height: fit-content;
  z-index: 2;
  padding-top: 3rem;
  padding-bottom: 3rem
}
.occtImage {
  width: 70vw;
  height: fit-content;
  z-index: 2;
  padding-top: 2rem;
  padding-bottom: 2rem
}
.signature {
  width: 10vw;
  height: fit-content;
  display: flex;
  flex-direction: row;
  justify-content: center;
}
#front {
  position: relative;
  z-index: 9;
}
#full-width {
  width: 100vw;
  /* max-width: none; */
}
#bold {
  font-weight: 900;
}

#typing-animation {
  font-family: 'Cedarville Cursive', cursive;
  overflow: hidden;
  white-space: nowrap;
  border-right: 0.15em solid transparent; 
  animation: typing 1s steps(40, end); 
  cursor: pointer;
}
#mob {
  display: none;
}
#leftHome {
  display: none;
}
#rightHome {
  display: none;
}
#web {
  display: flex;
}

@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}

/* video {
  width: 100%;
  height: auto;
} */

/* Media Queries */

  @media (max-width: 1127px) {
    .heroImage {
      width: 100vw;
      height: auto;
      position: absolute;
      bottom: 2vh;
      border-top: 100vh solid #562CD8;
    }
    .heroImage img {
      width: 100vw;
      height: auto;
    }
    .projectSection {
      flex-direction: column;
      align-items: center;
      justify-content: flex-start;
      margin-top: 8vh;
    }
    .project {
      width: 88.56vw;
    }
    #esr {
      margin-bottom: 6vh;
    }
    #projects {
      height: fit-content;
    }
  /* Hero */
    .landingContent {
      margin-top: -55vh;
      justify-content: center;
      align-items: center;
      width: 100vw;
    }
    .landingContent h1 {
      width: 95vw;
      justify-content: center;
      text-align: center;
      color: #ffffff;
    }
    #no-show {
      display: none;
    }
    #black {
      color: white;
    }
    .seeProjectsBtn {
      display: flex;
      justify-content: center;
      align-items: center;
    }
    .project img {
      width: 80vw;
      height: fit-content;
      padding-bottom: 3vh;
    }
    .buttonWrapper img {
      width: 8vw;
      background-color: none;
      border: none;
      border-radius: 0vw;
      padding: none;
    }
    .squeeze {
      width: 90vw;
      display: flex;
      flex-direction: column;
      justify-content: center;
    }
    .square {
      width: 85vw;
      height: fit-content;
      margin-bottom: 2rem;
      display: flex;
      align-items: center;
      align-self: center;
    }
    .square p {
      max-width: 50vw;
    }
    .mockup4 {
      width: 22vw;
      margin-left: 2vw;
      margin-top: 4.5vw;
    }
    .mockup1 {
      width: 22vw;
      margin-top: 3vw;
      margin-right: 2vw;
      margin-top: 4.5vw;
    }
    .mockup2 {
      width: 20.5vw;
      margin-left: -2.5vw;
      margin-top: 3vw;
    }
    .mockup3 {
      width: 21.7vw;
      margin-left: 1vw;
      margin-top: 4.05vw;
    }
    .signature {
      width: 14vw;
      padding-bottom: .5rem;
    }
    .header h2 {
      max-width: 55vw;
    }
    #mob {
      display: flex;
    }
    #web {
      display: none;
    }
    #blue {
        color: #C2EDF4;
    }
    
  }
/* ... */

